syntax = "proto3";

package lcm.service.v1;

import "google/api/annotations.proto";

message HealthCheckRequest {}

message HealthCheckResponse {
  bool status = 1;
  string message = 2;
}
service SystemService {
  rpc HealthCheck(HealthCheckRequest) returns (HealthCheckResponse) {
    option (google.api.http) = {
      get: "/v1/health"
    };
  }
}
