syntax = "proto3";

package permission.service.v1;

import "gnostic/openapi/v3/annotations.proto";

import "google/api/annotations.proto";
import "google/api/field_behavior.proto";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/field_mask.proto";

import "pagination/v1/pagination.proto";

// Menu Service
service MenuService {
  // List menus
  rpc List (pagination.PagingRequest) returns (ListMenuResponse) {}

  // Get menu details
  rpc Get (GetMenuRequest) returns (Menu) {}

  // Create menu
  rpc Create (CreateMenuRequest) returns (google.protobuf.Empty) {}

  // Update menu
  rpc Update (UpdateMenuRequest) returns (google.protobuf.Empty) {}

  // Delete menu
  rpc Delete (DeleteMenuRequest) returns (google.protobuf.Empty) {}
}

// Menu
message Menu {
  // Menu Type
  enum Type {
    CATALOG = 0;    // Catalog
    MENU = 1;       // Menu
    BUTTON = 2;     // Button
    EMBEDDED = 3;   // Embedded
    LINK = 4;       // External link
  }

  // Menu Status
  enum Status {
    OFF = 0;         // Disabled
    ON = 1;          // Enabled
  }

  optional uint32 id = 1 [
    json_name = "id",
    (google.api.field_behavior) = OPTIONAL,
    (gnostic.openapi.v3.property) = {
      description: "Menu ID"
    }
  ]; // Menu ID

  optional Status status = 2 [
    json_name = "status",
    (gnostic.openapi.v3.property) = {description: "Menu status"}
  ]; // Menu status

  optional Type type = 3 [
    json_name = "type",
    (gnostic.openapi.v3.property) = {description: "Menu type"}
  ]; // Menu type

  optional string path = 10 [
    json_name = "path",
    (google.api.field_behavior) = OPTIONAL,
    (gnostic.openapi.v3.property) = {
      description: "Route path"
    }
  ]; // Route path

  optional string redirect = 11 [
    json_name = "redirect",
    (google.api.field_behavior) = OPTIONAL,
    (gnostic.openapi.v3.property) = {
      description: "Redirect URL"
    }
  ]; // Redirect URL

  optional string alias = 12 [
    json_name = "alias",
    (google.api.field_behavior) = OPTIONAL,
    (gnostic.openapi.v3.property) = {
      description: "Route alias"
    }
  ]; // Route alias

  optional string name = 13 [
    json_name = "name",
    (google.api.field_behavior) = OPTIONAL,
    (gnostic.openapi.v3.property) = {
      description: "Route name, allowing us to use name instead of path to pass the to attribute to <router-link>."
    }
  ]; // Route name, allowing us to use name instead of path to pass the to attribute to <router-link>.

  optional string component = 14 [
    json_name = "component",
    (google.api.field_behavior) = OPTIONAL,
    (gnostic.openapi.v3.property) = {description: "Target component"}
  ]; // Target component

  optional MenuMeta meta = 15 [
    json_name = "meta",
    (google.api.field_behavior) = OPTIONAL,
    (gnostic.openapi.v3.property) = {description: "Route meta information"}
  ]; // Route meta information

  optional uint32 parent_id = 50 [json_name = "parentId", (gnostic.openapi.v3.property) = {description: "Parent node ID"}];  // Parent node ID
  repeated Menu children = 51 [json_name = "children", (gnostic.openapi.v3.property) = {description: "Children node tree"}];  // Children node tree

  optional uint32 created_by = 100 [json_name = "createdBy", (gnostic.openapi.v3.property) = {description: "Creator ID"}]; // Creator ID
  optional uint32 updated_by = 101 [json_name = "updatedBy", (gnostic.openapi.v3.property) = {description: "Updater ID"}]; // Updater ID
  optional uint32 deleted_by = 102 [json_name = "deletedBy", (gnostic.openapi.v3.property) = {description: "Deleter user ID"}]; // Deleter user ID

  optional google.protobuf.Timestamp created_at = 200 [json_name = "createdAt", (gnostic.openapi.v3.property) = {description: "Created time"}];// Created time
  optional google.protobuf.Timestamp updated_at = 201 [json_name = "updatedAt", (gnostic.openapi.v3.property) = {description: "Updated time"}];// Updated time
  optional google.protobuf.Timestamp deleted_at = 202 [json_name = "deletedAt", (gnostic.openapi.v3.property) = {description: "Deleted time"}];// Deleted time
}

// Route meta information
message MenuMeta {
  optional string activeIcon = 1 [
    json_name = "activeIcon",
    (google.api.field_behavior) = OPTIONAL,
    (gnostic.openapi.v3.property) = {
      description: "Active icon, used for: menu, tab"
    }
  ]; // Active icon, used for: menu, tab

  optional string activePath = 2 [
    json_name = "activePath",
    (google.api.field_behavior) = OPTIONAL,
    (gnostic.openapi.v3.property) = {
      description: "Currently active menu, used when you do not want to activate the current menu but need to activate a parent menu"
    }
  ]; // Currently active menu, used when you do not want to activate the current menu but need to activate a parent menu

  optional bool affixTab = 3 [
    json_name = "affixTab",
    (google.api.field_behavior) = OPTIONAL,
    (gnostic.openapi.v3.property) = {
      description: "Whether to pin the tab"
    }
  ]; // Whether to pin the tab

  optional int32 affixTabOrder = 4 [
    json_name = "affixTabOrder",
    (google.api.field_behavior) = OPTIONAL,
    (gnostic.openapi.v3.property) = {
      description: "Order of pinned tabs"
    }
  ]; // Order of pinned tabs

  repeated string authority = 5 [
    json_name = "authority",
    (google.api.field_behavior) = OPTIONAL,
    (gnostic.openapi.v3.property) = {
      description: "Permission list, requires specific role identifiers to access"
    }
  ]; // Permission list, requires specific role identifiers to access

  optional string badge = 6 [
    json_name = "badge",
    (google.api.field_behavior) = OPTIONAL,
    (gnostic.openapi.v3.property) = {
      description: "Badge"
    }
  ]; // Badge

  optional string badgeType = 7 [
    json_name = "badgeType",
    (google.api.field_behavior) = OPTIONAL,
    (gnostic.openapi.v3.property) = {
      description: "Badge type",
      enum: [{yaml: "dot"}, {yaml: "normal"}]
    }
  ]; // Badge type

  optional string badgeVariants = 8 [
    json_name = "badgeVariants",
    (google.api.field_behavior) = OPTIONAL,
    (gnostic.openapi.v3.property) = {
      description: "Badge color",
      enum: [{yaml: "default"}, {yaml: "destructive"}, {yaml: "primary"}, {yaml: "success"}, {yaml: "warning"}]
    }
  ]; // Badge color

  optional bool hideChildrenInMenu = 9 [
    json_name = "hideChildrenInMenu",
    (google.api.field_behavior) = OPTIONAL,
    (gnostic.openapi.v3.property) = {
      description: "Hide children of current route in menu"
    }
  ]; // Hide children of current route in menu

  optional bool hideInBreadcrumb = 10 [
    json_name = "hideInBreadcrumb",
    (google.api.field_behavior) = OPTIONAL,
    (gnostic.openapi.v3.property) = {
      description: "Hide current route in breadcrumb"
    }
  ]; // Hide current route in breadcrumb

  optional bool hideInMenu = 11 [
    json_name = "hideInMenu",
    (google.api.field_behavior) = OPTIONAL,
    (gnostic.openapi.v3.property) = {
      description: "Hide current route in menu"
    }
  ]; // Hide current route in menu

  optional bool hideInTab = 12 [
    json_name = "hideInTab",
    (google.api.field_behavior) = OPTIONAL,
    (gnostic.openapi.v3.property) = {
      description: "Hide current route in tab"
    }
  ]; // Hide current route in tab

  optional string icon = 13 [
    json_name = "icon",
    (google.api.field_behavior) = OPTIONAL,
    (gnostic.openapi.v3.property) = {
      description: "Icon, used for: menu, tab"
    }
  ]; // Icon, used for: menu, tab

  optional string iframeSrc = 14 [
    json_name = "iframeSrc",
    (google.api.field_behavior) = OPTIONAL,
    (gnostic.openapi.v3.property) = {
      description: "iframe URL"
    }
  ]; // iframe URL

  optional bool ignoreAccess = 15 [
    json_name = "ignoreAccess",
    (google.api.field_behavior) = OPTIONAL,
    (gnostic.openapi.v3.property) = {
      description: "Ignore permission, allow direct access"
    }
  ]; // Ignore permission, allow direct access

  optional bool keepAlive = 16 [
    json_name = "keepAlive",
    (google.api.field_behavior) = OPTIONAL,
    (gnostic.openapi.v3.property) = {
      description: "Enable KeepAlive caching"
    }
  ]; // Enable KeepAlive caching

  optional string link = 17 [
    json_name = "link",
    (google.api.field_behavior) = OPTIONAL,
    (gnostic.openapi.v3.property) = {
      description: "External link - redirect path"
    }
  ]; // External link - redirect path

  optional bool loaded = 18 [
    json_name = "loaded",
    (google.api.field_behavior) = OPTIONAL,
    (gnostic.openapi.v3.property) = {
      description: "Whether the route has been loaded"
    }
  ]; // Whether the route has been loaded

  optional int32 maxNumOfOpenTab = 19 [
    json_name = "maxNumOfOpenTab",
    (google.api.field_behavior) = OPTIONAL,
    (gnostic.openapi.v3.property) = {
      description: "Maximum number of open tabs"
    }
  ]; // Maximum number of open tabs

  optional bool menuVisibleWithForbidden = 20 [
    json_name = "menuVisibleWithForbidden",
    (google.api.field_behavior) = OPTIONAL,
    (gnostic.openapi.v3.property) = {
      description: "Menu is visible, but access will be redirected to 403"
    }
  ]; // Menu is visible, but access will be redirected to 403

  optional bool openInNewWindow = 21 [
    json_name = "openInNewWindow",
    (google.api.field_behavior) = OPTIONAL,
    (gnostic.openapi.v3.property) = {
      description: "Open in new window"
    }
  ]; // Open in new window

  optional int32 order = 22 [
    json_name = "order",
    (google.api.field_behavior) = OPTIONAL,
    (gnostic.openapi.v3.property) = {
      description: "Sort order, used for route->menu sorting"
    }
  ]; // Sort order, used for route->menu sorting

  optional string title = 23 [
    json_name = "title",
    (google.api.field_behavior) = OPTIONAL,
    (gnostic.openapi.v3.property) = {
      description: "Title name, displayed on the route"
    }
  ]; // Title name, displayed on the route
}

// Route item
message MenuRouteItem {
  repeated MenuRouteItem children = 1 [json_name = "children", (gnostic.openapi.v3.property) = {description: "Children node tree"}]; // Children node tree

  optional string path = 10 [
    json_name = "path",
    (google.api.field_behavior) = OPTIONAL,
    (gnostic.openapi.v3.property) = {
      description: "Route path"
    }
  ]; // Route path

  optional string redirect = 11 [
    json_name = "redirect",
    (google.api.field_behavior) = OPTIONAL,
    (gnostic.openapi.v3.property) = {
      description: "Redirect URL"
    }
  ]; // Redirect URL

  optional string alias = 12 [
    json_name = "alias",
    (google.api.field_behavior) = OPTIONAL,
    (gnostic.openapi.v3.property) = {
      description: "Route alias"
    }
  ]; // Route alias

  optional string name = 13 [
    json_name = "name",
    (google.api.field_behavior) = OPTIONAL,
    (gnostic.openapi.v3.property) = {
      description: "Route name, allowing us to use name instead of path to pass the to attribute to <router-link>."
    }
  ]; // Route name, allowing us to use name instead of path to pass the to attribute to <router-link>.

  optional string component = 14 [
    json_name = "component",
    (google.api.field_behavior) = OPTIONAL,
    (gnostic.openapi.v3.property) = {
      description: "Target component"
    }
  ]; // Target component

  optional MenuMeta meta = 15 [
    json_name = "meta",
    (google.api.field_behavior) = OPTIONAL,
    (gnostic.openapi.v3.property) = {
      description: "Route meta information"
    }
  ]; // Route meta information
}

// List menu response
message ListMenuResponse {
  repeated Menu items = 1;
  uint64 total = 2;
}

// Get menu details request
message GetMenuRequest {
  oneof query_by {
    uint32 id = 1 [
      (gnostic.openapi.v3.property) = {description: "ID", read_only: true},
      json_name = "id"
    ]; // ID
  }

  optional google.protobuf.FieldMask view_mask = 100 [
    json_name = "viewMask",
    (gnostic.openapi.v3.property) = {
      description: "View field mask for controlling returned fields"
    }
  ]; // View field mask for controlling returned fields
}

// Create menu request
message CreateMenuRequest {
  Menu data = 1;
}

// Update menu request
message UpdateMenuRequest {
  uint32 id = 1;

  Menu data = 2;

  google.protobuf.FieldMask update_mask = 3 [
    (gnostic.openapi.v3.property) = {
      description: "List of fields to update",
      example: {yaml : "id,realname,username"}
    },
    json_name = "updateMask"
  ]; // List of fields to update

  optional bool allow_missing = 4 [
    (gnostic.openapi.v3.property) = {description: "If set to true and the resource does not exist, it will be created (inserted), and the `updateMask` field will be ignored in this case."},
    json_name = "allowMissing"
  ]; // If set to true and the resource does not exist, it will be created (inserted), and the `updateMask` field will be ignored in this case.
}

// Delete menu request
message DeleteMenuRequest {
  optional uint32 operator_id = 1 [
    (gnostic.openapi.v3.property) = {description: "Operator user ID", read_only: true},
    json_name = "operatorId"
  ]; // Operator user ID

  uint32 id = 2;
}
